seperate demo and source expand readme

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+demo/node_modules
+/demo/node_modules
 /.pnp
 .pnp.js
 
@@ -17,6 +19,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/klad
 
 npm-debug.log*
 yarn-debug.log*
