--- a/demo/package.json
+++ b/demo/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "/usefavicon",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "scripts": {
     "clean": "rm dist/bundle.js",
     "start": "parcel src/index.html",
-    "build-prod": "parcel build src/index.html"
+    "build": "parcel build src/index.html --public-url /usefavicon"
   },
   "dependencies": {
     "react": "^16.13.1",
