--- a/demo/package.json
+++ b/demo/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "homepage": "/usefavicon",
-  "keywords": [],
-  "author": "",
+  "keywords": ["react-hook", "react", "favicon"],
+  "author": "Jules Blom",
   "license": "ISC",
   "scripts": {
     "clean": "rm dist/bundle.js",
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html --public-url /usefavicon"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
