--- a/demo/package.json
+++ b/demo/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "homepage": "/usefavicon",
-  "keywords": ["react-hook", "react", "favicon"],
+  "keywords": [
+    "react-hook",
+    "react",
+    "favicon"
+  ],
   "author": "Jules Blom",
   "license": "ISC",
   "scripts": {
@@ -17,14 +21,14 @@
     "dist"
   ],
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.1.2"
+    "prettier": "^2.2.1"
   }
 }
